Modified Buyroduct Controller
